<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTTPServer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn1_text">Start HTTP Server</string>
    <string name="btn2_text">Stop HTTP Server</string>
    <string name="statistics">Statistics</string>
    <string name="transferred_bytes">Transferred size (KB):</string>
    <string name="request_count">Request count:</string>
    <string name="current_clients">Current clients:</string>

</resources>